[package]
name = "sev_attest_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
sev = { version = "1.2.1", features = ["openssl"] }
openssl = "0.10.57"
serde = "1.0.0"
serde_json = "1.0.0"
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
hex = "0.4.3"
